[gd_scene load_steps=68 format=2]

[ext_resource path="res://assets/player/jump14.png" type="Texture" id=1]
[ext_resource path="res://Player2.gd" type="Script" id=2]
[ext_resource path="res://assets/heart.png" type="Texture" id=3]
[ext_resource path="res://assets/player/walk8.png" type="Texture" id=4]
[ext_resource path="res://assets/player/walk5.png" type="Texture" id=5]
[ext_resource path="res://assets/player/walk3.png" type="Texture" id=6]
[ext_resource path="res://assets/player/walk2.png" type="Texture" id=7]
[ext_resource path="res://assets/player/walk6.png" type="Texture" id=8]
[ext_resource path="res://assets/player/walk1.png" type="Texture" id=9]
[ext_resource path="res://assets/player/walk4.png" type="Texture" id=10]
[ext_resource path="res://assets/player/walk7.png" type="Texture" id=11]
[ext_resource path="res://assets/player/jump20.png" type="Texture" id=12]
[ext_resource path="res://assets/player/jump23.png" type="Texture" id=13]
[ext_resource path="res://assets/player/jump16.png" type="Texture" id=14]
[ext_resource path="res://assets/player/jump21.png" type="Texture" id=15]
[ext_resource path="res://assets/player/jump25.png" type="Texture" id=16]
[ext_resource path="res://assets/player/jump4.png" type="Texture" id=17]
[ext_resource path="res://assets/player/jump27.png" type="Texture" id=18]
[ext_resource path="res://assets/player/jump11.png" type="Texture" id=19]
[ext_resource path="res://assets/player/jump10.png" type="Texture" id=20]
[ext_resource path="res://assets/player/jump17.png" type="Texture" id=21]
[ext_resource path="res://assets/player/jump5.png" type="Texture" id=22]
[ext_resource path="res://assets/player/jump13.png" type="Texture" id=23]
[ext_resource path="res://assets/player/jump3.png" type="Texture" id=24]
[ext_resource path="res://assets/player/jump19.png" type="Texture" id=25]
[ext_resource path="res://assets/player/jump18.png" type="Texture" id=26]
[ext_resource path="res://assets/player/jump2.png" type="Texture" id=27]
[ext_resource path="res://assets/player/jump6.png" type="Texture" id=28]
[ext_resource path="res://assets/player/jump28.png" type="Texture" id=29]
[ext_resource path="res://assets/player/jump8.png" type="Texture" id=30]
[ext_resource path="res://assets/player/jump9.png" type="Texture" id=31]
[ext_resource path="res://assets/player/jump15.png" type="Texture" id=32]
[ext_resource path="res://assets/player/jump22.png" type="Texture" id=33]
[ext_resource path="res://assets/player/jump12.png" type="Texture" id=34]
[ext_resource path="res://assets/player/jump7.png" type="Texture" id=35]
[ext_resource path="res://assets/player/jump24.png" type="Texture" id=36]
[ext_resource path="res://assets/player/jump30.png" type="Texture" id=37]
[ext_resource path="res://assets/player/jump29.png" type="Texture" id=38]
[ext_resource path="res://assets/player/jump1.png" type="Texture" id=39]
[ext_resource path="res://assets/player/jump26.png" type="Texture" id=40]
[ext_resource path="res://assets/audio/spell2.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/player/idle1.png" type="Texture" id=42]
[ext_resource path="res://assets/player/complete_split.png" type="Texture" id=43]
[ext_resource path="res://assets/player/complete.png" type="Texture" id=44]
[ext_resource path="res://assets/salt.png" type="Texture" id=45]
[ext_resource path="res://assets/audio/Laser Shot.wav" type="AudioStream" id=46]
[ext_resource path="res://assets/audio/Laser Shot-reversed.wav" type="AudioStream" id=47]
[ext_resource path="res://SaltEmitter.tscn" type="PackedScene" id=48]
[ext_resource path="res://assets/audio/Single-Barefoot-Footstep-C-www.fesliyanstudios.com.wav" type="AudioStream" id=52]
[ext_resource path="res://PlayerLight.tscn" type="PackedScene" id=54]
[ext_resource path="res://assets/audio/Accept.wav" type="AudioStream" id=55]
[ext_resource path="res://assets/audio/gotta_split.wav" type="AudioStream" id=56]
[ext_resource path="res://assets/audio/you_complete_me.wav" type="AudioStream" id=57]
[ext_resource path="res://PlayerSplitParticles.tscn" type="PackedScene" id=58]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3866, 12.416 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.44059, 5.9536 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 43 ) ],
"loop": false,
"name": "complete_split",
"speed": 0.5
}, {
"frames": [ ExtResource( 32 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 33 ), ExtResource( 13 ), ExtResource( 36 ), ExtResource( 16 ), ExtResource( 40 ), ExtResource( 18 ), ExtResource( 29 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "fall",
"speed": 36.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 34 ), ExtResource( 23 ), ExtResource( 1 ), ExtResource( 32 ) ],
"loop": true,
"name": "jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "complete",
"speed": 100.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 36.0
} ]

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.000117411 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.25098 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 10, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 0.984314, 0.501961, 0.501961, 1, 0.984314, 0.501961, 0.501961, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 200.0
damping_random = 1.0
scale = 0.05
scale_random = 0.05
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[node name="Player2" type="KinematicBody2D"]
light_mask = -2147483647
z_index = 2
script = ExtResource( 2 )

[node name="BotRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
cast_to = Vector2( 15, 0 )

[node name="BotRayCast2" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
cast_to = Vector2( 0, -70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.584 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ConnectArea2" type="Area2D" parent="."]
gravity_point = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectArea2"]
position = Vector2( 0, -20.4248 )
shape = SubResource( 2 )

[node name="SaltRemovalArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaltRemovalArea2"]
position = Vector2( 0, -12.584 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
material = SubResource( 3 )
position = Vector2( -7, -44 )
frames = SubResource( 4 )
animation = "idle"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/complete = SubResource( 5 )

[node name="PlayerSplitParticles" parent="." instance=ExtResource( 58 )]
amount = 32

[node name="PlayerLight" parent="." instance=ExtResource( 54 )]
position = Vector2( 0, -10 )
scale = Vector2( 8, 8 )

[node name="Salt" type="Node2D" parent="."]
light_mask = 0
z_index = 4

[node name="SaltLabel" type="Label" parent="Salt"]
light_mask = 0
margin_left = -19.8862
margin_top = -40.2531
margin_right = 86.1138
margin_bottom = -16.2531
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = " SALT! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Salt/SaltLabel"]
show_behind_parent = true
light_mask = 0
margin_top = -2.0
margin_right = 40.0
margin_bottom = 14.0
color = Color( 0, 0, 0, 0.376471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="Salt"]
visible = false
light_mask = 0
position = Vector2( 0, -20 )
lifetime = 0.5
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 45 )

[node name="SaltEmitter" parent="Salt" instance=ExtResource( 48 )]
light_mask = 0
position = Vector2( 0, -22 )
z_index = 1

[node name="CompleteParticles" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
light_mask = -2147483648
position = Vector2( 0, -16 )
z_index = 6
emitting = false
amount = 16
lifetime = 3.0
explosiveness = 1.0
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 3 )

[node name="FootstepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 52 )
volume_db = -12.0

[node name="FreezeCameraSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 46 )

[node name="UnfreezeCameraSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 47 )

[node name="RemoveSaltSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 41 )
volume_db = -6.0
bus = "SaltRemover"

[node name="CompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 55 )
volume_db = -6.0
pitch_scale = 0.7
bus = "Complete"

[node name="YouCompleteMeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 57 )
volume_db = 24.0

[node name="GottaSplitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 56 )
volume_db = 24.0

[node name="CameraTween" type="Tween" parent="."]

[node name="CompleteTween" type="Tween" parent="."]

[node name="PassTween" type="Tween" parent="."]

[node name="CompleteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CoyoteTimeTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="BufferedJumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="ConnectArea2" to="." method="_on_ConnectArea_area_entered"]
[connection signal="timeout" from="CompleteTimer" to="." method="_on_CompleteTimer_timeout"]
[connection signal="timeout" from="CoyoteTimeTimer" to="." method="_on_CoyoteTimeTimer_timeout"]
[connection signal="timeout" from="BufferedJumpTimer" to="." method="_on_BufferedJumpTimer_timeout"]
